[gd_scene load_steps=12 format=3 uid="uid://c0v3m48f2fqrr"]

[ext_resource type="Script" path="res://levels/level_2/level2.gd" id="1_be3ae"]
[ext_resource type="Texture2D" uid="uid://c3v0lwnpg5fh1" path="res://assets/ui/logos/logo-sus.png" id="3_rko4m"]
[ext_resource type="Texture2D" uid="uid://dbb0egvnsjikk" path="res://assets/Levels/Level2/constituição.png" id="3_w0lb8"]
[ext_resource type="PackedScene" uid="uid://bbue2npeku8yi" path="res://Utils/InteractibleObject/InteractibleWord/interactible_word.tscn" id="4_cy7xa"]
[ext_resource type="FontFile" uid="uid://3g03rh87d7vx" path="res://assets/fonts/NoteToSelf-Regular.otf" id="4_sr717"]
[ext_resource type="Texture2D" uid="uid://damd6wvu58vok" path="res://assets/Levels/Level2/balde.png" id="5_3wjuc"]
[ext_resource type="PackedScene" uid="uid://b6tg1l8pm2s2s" path="res://dialogue/dialogue_scene.tscn" id="5_7nh4b"]

[sub_resource type="Animation" id="Animation_lfr7v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WordAtractor/Balde:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.15, 0.15)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WordAtractor/LogoSus:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WordAtractor/Constituição:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_1n20u"]
resource_name = "susse"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WordAtractor/Balde:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.15, 0.15), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WordAtractor/LogoSus:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_fc8v0"]
resource_name = "constituicao"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WordAtractor/Balde:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.15, 0.15), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WordAtractor/Constituição:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.4, 0.4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v12l6"]
_data = {
"RESET": SubResource("Animation_lfr7v"),
"constituicao": SubResource("Animation_fc8v0"),
"susse": SubResource("Animation_1n20u")
}

[node name="Level2" type="Node2D"]
script = ExtResource("1_be3ae")
metadata/_edit_lock_ = true

[node name="Background" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
expand_mode = 2
metadata/_edit_lock_ = true

[node name="WordAtractor" type="Marker2D" parent="."]
position = Vector2(576, 296)
metadata/_edit_group_ = true

[node name="Constituição" type="Sprite2D" parent="WordAtractor"]
position = Vector2(0, 80)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("3_w0lb8")

[node name="Title" type="Label" parent="WordAtractor/Constituição"]
offset_left = -402.0
offset_top = -582.0
offset_right = 7393.0
offset_bottom = 1088.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_sr717")
theme_override_font_sizes/font_size = 1000
text = "Constituição"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LogoSus" type="Node2D" parent="WordAtractor"]
scale = Vector2(1e-05, 1e-05)

[node name="ColorRect" type="ColorRect" parent="WordAtractor/LogoSus"]
offset_left = -217.0
offset_top = -59.0
offset_right = 216.0
offset_bottom = 68.0
color = Color(0.980392, 0.988235, 1, 0.713726)

[node name="Logo-sus" type="Sprite2D" parent="WordAtractor/LogoSus"]
position = Vector2(4, 4)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_rko4m")

[node name="Balde" type="Sprite2D" parent="WordAtractor"]
visible = false
position = Vector2(0, 80)
scale = Vector2(0.15, 0.15)
texture = ExtResource("5_3wjuc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v12l6")
}

[node name="InteractibleButtons" type="Node2D" parent="."]

[node name="SaudePublicaUniversal" parent="InteractibleButtons" node_paths=PackedStringArray("destino") instance=ExtResource("4_cy7xa")]
visible = false
position = Vector2(777, 123)
texture_path = "res://assets/Levels/Level2/const1.jpg"
destino = NodePath("../../WordAtractor")
texture_size = Vector2(220, 60)

[node name="SaudeGratuita" parent="InteractibleButtons" node_paths=PackedStringArray("destino") instance=ExtResource("4_cy7xa")]
visible = false
position = Vector2(347, 128)
texture_path = "res://assets/Levels/Level2/const2.jpg"
destino = NodePath("../../WordAtractor")
texture_size = Vector2(220, 60)

[node name="SaudeDireitoTodos" parent="InteractibleButtons" node_paths=PackedStringArray("destino") instance=ExtResource("4_cy7xa")]
visible = false
position = Vector2(1045, 353)
texture_path = "res://assets/Levels/Level2/const3.jpg"
destino = NodePath("../../WordAtractor")
texture_size = Vector2(220, 60)

[node name="DeveresDoEstado" parent="InteractibleButtons" node_paths=PackedStringArray("destino") instance=ExtResource("4_cy7xa")]
visible = false
position = Vector2(242, 490)
destino = NodePath("../../WordAtractor")
texture_size = Vector2(220, 60)

[node name="Hierarquizacao" parent="InteractibleButtons" node_paths=PackedStringArray("destino") instance=ExtResource("4_cy7xa")]
visible = false
position = Vector2(460, 561)
texture_path = "res://assets/Levels/Level2/sus1.jpg"
destino = NodePath("../../WordAtractor")
texture_size = Vector2(220, 60)

[node name="ParticipacaoSocial" parent="InteractibleButtons" node_paths=PackedStringArray("destino") instance=ExtResource("4_cy7xa")]
visible = false
position = Vector2(320, 336)
texture_path = "res://assets/Levels/Level2/sus2.jpg"
destino = NodePath("../../WordAtractor")
texture_size = Vector2(220, 60)

[node name="Universalidade" parent="InteractibleButtons" node_paths=PackedStringArray("destino") instance=ExtResource("4_cy7xa")]
visible = false
position = Vector2(579, 39)
texture_path = "res://assets/Levels/Level2/sus3.jpg"
destino = NodePath("../../WordAtractor")
texture_size = Vector2(220, 60)

[node name="Integralidade" parent="InteractibleButtons" node_paths=PackedStringArray("destino") instance=ExtResource("4_cy7xa")]
visible = false
position = Vector2(717, 442)
texture_path = "res://assets/Levels/Level2/sus4.jpg"
destino = NodePath("../../WordAtractor")
texture_size = Vector2(220, 60)

[node name="Equidade" parent="InteractibleButtons" node_paths=PackedStringArray("destino") instance=ExtResource("4_cy7xa")]
visible = false
position = Vector2(960, 534)
texture_path = "res://assets/Levels/Level2/sus5.jpg"
destino = NodePath("../../WordAtractor")
texture_size = Vector2(220, 60)

[node name="Descentralizacao" parent="InteractibleButtons" node_paths=PackedStringArray("destino") instance=ExtResource("4_cy7xa")]
visible = false
position = Vector2(178, 220)
texture_path = "res://assets/Levels/Level2/sus6.jpg"
destino = NodePath("../../WordAtractor")
texture_size = Vector2(220, 60)

[node name="Regionalizacao" parent="InteractibleButtons" node_paths=PackedStringArray("destino") instance=ExtResource("4_cy7xa")]
visible = false
position = Vector2(1011, 176)
texture_path = "res://assets/Levels/Level2/sus7.jpg"
destino = NodePath("../../WordAtractor")
texture_size = Vector2(220, 60)

[node name="DialogueScene" parent="." instance=ExtResource("5_7nh4b")]
visible = false

[connection signal="button_pressed" from="InteractibleButtons/SaudePublicaUniversal" to="." method="_on_interactible_word_clicado"]
[connection signal="button_pressed" from="InteractibleButtons/SaudeGratuita" to="." method="_on_interactible_word_clicado"]
[connection signal="button_pressed" from="InteractibleButtons/SaudeDireitoTodos" to="." method="_on_interactible_word_clicado"]
[connection signal="button_pressed" from="InteractibleButtons/DeveresDoEstado" to="." method="_on_interactible_word_clicado"]
[connection signal="button_pressed" from="InteractibleButtons/Hierarquizacao" to="." method="_on_interactible_word_clicado"]
[connection signal="button_pressed" from="InteractibleButtons/ParticipacaoSocial" to="." method="_on_interactible_word_clicado"]
[connection signal="button_pressed" from="InteractibleButtons/Universalidade" to="." method="_on_interactible_word_clicado"]
[connection signal="button_pressed" from="InteractibleButtons/Integralidade" to="." method="_on_interactible_word_clicado"]
[connection signal="button_pressed" from="InteractibleButtons/Equidade" to="." method="_on_interactible_word_clicado"]
[connection signal="button_pressed" from="InteractibleButtons/Descentralizacao" to="." method="_on_interactible_word_clicado"]
[connection signal="button_pressed" from="InteractibleButtons/Regionalizacao" to="." method="_on_interactible_word_clicado"]
[connection signal="next_button_pressed" from="DialogueScene" to="." method="_on_dialogue_scene_next_button_pressed"]
